--- a/TextDetection.Console.App/TextDetection.Console.App.csproj
+++ b/TextDetection.Console.App/TextDetection.Console.App.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TextDetection\TextDetection.csproj" />
+    <ProjectReference Include="..\TextRecognition\TextRecognition.csproj" />
   </ItemGroup>
 
   <ItemGroup>
