--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+        env:
+          NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
       - name: Install dependencies
         run: dotnet restore
       - name: Build
