--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: dotnet package
 on: [push]
 jobs:
-  build:
+  text-detection:
     runs-on: self-hosted
     strategy:
       matrix:
@@ -15,17 +15,42 @@ jobs:
           dotnet-version: ${{ matrix.dotnet-version }}
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
-      - name: Open src dir
-        run: cd src
+      - name: Open src/TextDetection dir
+        run: cd src/TextDetection
+      - name: Install dependencies
+        run: dotnet restore
       - name: Build
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release --no-restore
       - name: Test
-        run: dotnet tests --verbosity normal
-      - name: Create the TextDetection package
-        run: dotnet pack --configuration Release TextDetection/TextDetection.csproj
-      - name: Publish the TextDetection package to GPR
-        run: dotnet nuget push TextDetection/bin/Release/*.nupkg
-      - name: Create the TextRecognition package
-        run: dotnet pack --configuration Release TextRecognition/TextRecognition.csproj
-      - name: Publish the TextRecognition package to GPR
-        run: dotnet nuget push TextRecognition/bin/Release/*.nupkg
+        run: dotnet test --no-restore --verbosity normal
+      - name: Create the package
+        run: dotnet pack --configuration Release TextDetection.csproj
+      - name: Publish the package to GPR
+        run: dotnet nuget push bin/Release/*.nupkg
+
+  text-recognition:
+    runs-on: self-hosted
+    strategy:
+      matrix:
+        dotnet-version: ["5.0.x"]
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: ${{ matrix.dotnet-version }}
+        env:
+          NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
+      - name: Open src/TextRecognition dir
+        run: cd src/TextRecognition
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+      - name: Test
+        run: dotnet test --no-restore --verbosity normal
+      - name: Create the package
+        run: dotnet pack --configuration Release TextRecognition.csproj
+      - name: Publish the package to GPR
+        run: dotnet nuget push bin/Release/*.nupkg
