--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,9 +6,12 @@ jobs:
     strategy:
       matrix:
         dotnet-version: ["5.0.x"]
+    defaults:
+      run:
+        working-directory: ./src
 
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v3
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v2
@@ -16,9 +19,7 @@ jobs:
           dotnet-version: ${{ matrix.dotnet-version }}
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
-      - name: Open src dir
-        run: cd src
-      - name: list
+      - name: List
         run: ls
       - name: Build
         run: dotnet build --configuration Release
