publish action only on master

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,8 @@
 name: dotnet package
-on: [push]
+on:
+  push:
+    branches:
+      - master
 jobs:
   publish:
     runs-on: self-hosted
@@ -26,6 +29,6 @@ jobs:
       - name: Test
         run: dotnet test --verbosity normal
       - name: Create the package
-        run: dotnet pack --configuration Release TextDetection.csproj
+        run: dotnet pack --configuration Release TextDetection/TextDetection.csproj
       - name: Publish the package to GPR
         run: dotnet nuget push TextDetection/bin/Release/*.nupkg
