--- a/src/Ok.TextRecognition.Detection/Ok.TextRecognition.Detection.csproj
+++ b/src/Ok.TextRecognition.Detection/Ok.TextRecognition.Detection.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <PackageReference Include="Emgu.CV" Version="4.5.5.4823" />
+    <PackageReference Include="Emgu.CV.Bitmap" Version="4.5.5.4823" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.5.5.4823" />
     <PackageReference Include="Microsoft.ML" Version="1.7.1" />
     <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.7.1" />
@@ -37,5 +38,9 @@
     <PackageReference Include="Microsoft.ML.OnnxTransformer" Version="1.7.1" />
     <PackageReference Include="Microsoft.Spatial" Version="7.10.0" />
     <PackageReference Include="Numpy" Version="3.7.1.28" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ok.TextRecognition.Extensions\Ok.TextRecognition.Extensions.csproj" />
   </ItemGroup>
 </Project>
