--- a/src/Ok.TextRecognition.Recognition/Ok.TextRecognition.Recognition.csproj
+++ b/src/Ok.TextRecognition.Recognition/Ok.TextRecognition.Recognition.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="Emgu.CV" Version="4.5.5.4823" />
+    <PackageReference Include="Emgu.CV.Bitmap" Version="4.5.5.4823" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.5.5.4823" />
     <PackageReference Include="Microsoft.ML" Version="1.7.1" />
     <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.7.1" />
