--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,10 @@ jobs:
         working-directory: ./src
     timeout-minutes: 15
     steps:
+      - name: Check nuget access key
+        env:
+          NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
+        run: echo "auth" | echo ${NUGET_AUTH_TOKEN}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
