--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: dotnet package
 on:
   push:
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+      - "[0-9]+.[0-9]+.[0-9]+"
 jobs:
   publish:
     runs-on: self-hosted
@@ -23,7 +23,7 @@ jobs:
       - name: Verify commit exists in origin/master
         run: git branch --remote --contains | Select-String 'origin/master'
       - name: Set VERSION variable from tag
-        run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
       - name: Build
         run: dotnet build --configuration Release
       - name: Test
@@ -33,10 +33,10 @@ jobs:
       - name: Publish detection package
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
-        run: dotnet nuget push Ok.TextRecognition.Detection/bin/Release/Ok.TextRecognition.Detection.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_AUTH_TOKEN
+        run: dotnet nuget push Ok.TextRecognition.Detection/bin/Release/Ok.TextRecognition.Detection.$env:VERSION.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_AUTH_TOKEN
       - name: Create recognition package
         run: dotnet pack --configuration Release Ok.TextRecognition.Recognition/Ok.TextRecognition.Recognition.csproj
       - name: Publish recognition package
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
-        run: dotnet nuget push Ok.TextRecognition.Recognition/bin/Release/Ok.TextRecognition.Recognition.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_AUTH_TOKEN
+        run: dotnet nuget push Ok.TextRecognition.Recognition/bin/Release/Ok.TextRecognition.Recognition.$env:VERSION.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_AUTH_TOKEN
