--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,10 +22,9 @@ jobs:
           dotnet-version: ${{ matrix.dotnet-version }}
       - name: Verify commit exists in origin/master
         run: git branch --remote --contains | Select-String 'origin/master'
-      - name: Echo VERSION
-        run: echo ${GITHUB_REF#refs/tags/}
       - name: Set VERSION variable from tag
-        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+        id: branch
+        run: echo ::set-output version=VERSION::${GITHUB_REF#refs/tags/}
       - name: Build
         run: dotnet build --configuration Release
       - name: Test
@@ -34,11 +33,13 @@ jobs:
         run: dotnet pack --configuration Release Ok.TextRecognition.Detection/Ok.TextRecognition.Detection.csproj
       - name: Publish detection package
         env:
+          VERSION: ${{ steps.vars.outputs.version }}
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
         run: dotnet nuget push Ok.TextRecognition.Detection/bin/Release/Ok.TextRecognition.Detection.$env:VERSION.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_AUTH_TOKEN
       - name: Create recognition package
         run: dotnet pack --configuration Release Ok.TextRecognition.Recognition/Ok.TextRecognition.Recognition.csproj
       - name: Publish recognition package
         env:
+          VERSION: ${{ steps.vars.outputs.version }}
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
         run: dotnet nuget push Ok.TextRecognition.Recognition/bin/Release/Ok.TextRecognition.Recognition.$env:VERSION.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_AUTH_TOKEN
