--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,13 +33,13 @@ jobs:
         run: dotnet pack --configuration Release Ok.TextRecognition.Detection/Ok.TextRecognition.Detection.csproj
       - name: Publish detection package
         env:
-          VERSION: ${{ steps.vars.outputs.version }}
+          VERSION: ${{ steps.branch.outputs.version }}
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
         run: dotnet nuget push Ok.TextRecognition.Detection/bin/Release/Ok.TextRecognition.Detection.$env:VERSION.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_AUTH_TOKEN
       - name: Create recognition package
         run: dotnet pack --configuration Release Ok.TextRecognition.Recognition/Ok.TextRecognition.Recognition.csproj
       - name: Publish recognition package
         env:
-          VERSION: ${{ steps.vars.outputs.version }}
+          VERSION: ${{ steps.branch.outputs.version }}
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
         run: dotnet nuget push Ok.TextRecognition.Recognition/bin/Release/Ok.TextRecognition.Recognition.$env:VERSION.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_AUTH_TOKEN
