--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         run: git branch --remote --contains | Select-String 'origin/master'
       - name: Set version variable from tag
         id: branch
-        run: echo ::set-output name=version::${GITHUB_REF#refs/tags/}
+        run: echo ::set-output name=version::${GITHUB_REF/refs\/tags\//}
       - name: Echo version variable
         env:
           VERSION: ${{ steps.branch.outputs.version }}
