--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
           dotnet-version: ${{ matrix.dotnet-version }}
       - name: Verify commit exists in origin/master
         run: git branch --remote --contains | Select-String 'origin/master'
+      - name: Echo git tags
+        run: echo ${GITHUB_REF/refs\/tags\//}
       - name: Set version variable from tag
         id: branch
         run: echo ::set-output name=version::${GITHUB_REF/refs\/tags\//}
