--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Echo git ref
-        run: echo $GITHUB_REF
+        run: echo $env:GITHUB_REF
       - name: Echo git ref 2
         env:
           REF: ${{ github.ref }}
         run: echo $env:REF
       - name: Echo git tags
-        run: echo ${GITHUB_REF/refs\/tags\//}
+        run: echo ${env:GITHUB_REF/refs\/tags\//}
       - name: Build
         run: dotnet build --configuration Release
       - name: Test
