--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Echo git ref
         run: echo $env:GITHUB_REF
-      - name: Echo git tags
-        run: echo ${env:GITHUB_REF/refs\/tags\//}
       - name: Echo git tags 2
-        run: echo echo $env:GITHUB_REF | cut -d / -f 3
+        run: echo $env:GITHUB_REF -replace 'refs\/tags\/'
+      - name: Echo git tags
+        run: echo $(git describe --tags --abbrev=0)
       - name: Build
         run: dotnet build --configuration Release
       - name: Test
