--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Echo git ref
         run: echo $env:GITHUB_REF
-      - uses: olegtarasov/get-tag@v2.1
+      - name: get git tag
+        uses: olegtarasov/get-tag@v2.1
         id: tagName
         with:
           tagRegex: "(.*)" # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
