--- a/src/Ok.TextRecognition.Recognition.Tests/Ok.TextRecognition.Recognition.Tests.csproj
+++ b/src/Ok.TextRecognition.Recognition.Tests/Ok.TextRecognition.Recognition.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -34,6 +34,9 @@
 
   <ItemGroup>
     <None Update="assets\data\30.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="assets\data\31.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="assets\data\660.png">
